--- a/package.json
+++ b/package.json
@@ -18,21 +18,27 @@
     "babel-plugin-styled-components": "^2.1.4",
     "d3": "^7.9.0",
     "dotenv": "^16.4.5",
+    "flexsearch": "^0.7.43",
     "gatsby": "^5.13.5",
     "gatsby-omni-font-loader": "^2.0.2",
     "gatsby-plugin-image": "^3.13.1",
+    "gatsby-plugin-local-search": "^2.0.1",
     "gatsby-plugin-sharp": "^5.13.1",
     "gatsby-plugin-styled-components": "^6.13.1",
     "gatsby-source-airtable": "^2.4.2",
     "gatsby-source-filesystem": "^5.13.1",
+    "gatsby-transformer-csv": "^5.13.1",
     "gatsby-transformer-remark": "^6.13.1",
     "gatsby-transformer-sharp": "^5.13.1",
     "polished": "^4.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-select": "^5.8.0",
+    "react-use-flexsearch": "^0.1.1",
+    "react-waypoint": "^10.3.0",
     "slugify": "^1.6.6",
-    "styled-components": "^6.1.11"
+    "styled-components": "^6.1.11",
+    "underscore": "^1.13.7"
   },
   "devDependencies": {
     "prettier": "^3.3.2"
